--- a/tic-tac-toe/src/App.css
+++ b/tic-tac-toe/src/App.css
@@ -1,5 +1,9 @@
 .App {
+  min-height: 100vh;
+  padding: 30px;;
+  background-color: #282c34;
   text-align: center;
+  color: white;
 }
 
 .App-logo {
@@ -7,32 +11,36 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn {
+  /* make a button:
+  - with padding 12px 20px
+  - opaque background
+  - #ccc border and text color
+  - highlighted when the user hovers over it */
+  padding: 12px 20px;
+  background-color: rgba(0, 0, 0, 0);
+  border: 1px solid #ccc;
+  color: #ccc;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  /* remove button browser styles */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.btn:hover {
+  background-color: #ccc;
+  color: #282c34;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 12px;
+  border: 1px dashed #ccc;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
