--- a/tic-tac-toe/src/App.css
+++ b/tic-tac-toe/src/App.css
@@ -16,10 +16,13 @@
   - with padding 12px 20px
   - opaque background
   - #ccc border and text color
-  - highlighted when the user hovers over it */
+  - highlighted when the user hovers over it
+  - rounded borders */
+  margin: 0 12px;
   padding: 12px 20px;
   background-color: rgba(0, 0, 0, 0);
   border: 1px solid #ccc;
+  border-radius: 4px;
   color: #ccc;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
@@ -29,7 +32,7 @@
   appearance: none;
 }
 
-.btn:hover {
+.btn:not([disabled]):hover {
   background-color: #ccc;
   color: #282c34;
 }
